--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="nav-wrapper teal">
-    <a href="/" class="brand-logo center">Application de pokemosn</a>
+    <a href="/" class="brand-logo center">Application de pokemon</a>
   </div>
 </nav>
 <router-outlet></router-outlet>
