--- a/src/app/pokemons/detail-pokemon/detail-pokemon.component.html
+++ b/src/app/pokemons/detail-pokemon/detail-pokemon.component.html
@@ -24,7 +24,7 @@
                 <tr>
                   <td>Types</td>
                   <td>
-                    <span *ngFor="let type of pokemon.types" class="{{ type | pokemonTypeColor }}">{{type}}</span>
+                    <span *ngFor="let type of pokemon.types" class="{{ type | pokemonTypeColor }}">{{ type }}</span>
                   </td>
                 </tr>
                 <tr>
@@ -37,11 +37,14 @@
 
           <div class="card-action">
             <a (click)="goBack()" class="waves-effect waves-light btn">Retour</a>
-            <a (click)="goEdit(pokemon)" class="waves-effect waves-light btn">Editer</a>
+            <a (click)="goEdit(pokemon)" class="waves-effect waves-light btn">Éditer</a>
           </div>
-        </div>
 
+        </div>
     </div>
   </div>
 </div>
-<h4 *ngIf="!pokemon" class="center">Aucun pokémon à afficher !</h4>
+<!-- <h4 *ngIf="!pokemon" class="center">Aucun pokémon à afficher !</h4> -->
+<h4 *ngIf="!pokemon" class="center">
+  <pkm-loader></pkm-loader>
+</h4>
