--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <nav>
   <div class="nav-wrapper teal">
     <a href="/" class="brand-logo center">Application de pokemon</a>
+    <ul id="nav-mobile" class="left hide-on-med-and-down">
+      <li><em>Issa-BARRY</em></li>
+      <li><a (click)="goNewPokemon()">Create-Pokemon</a></li>
+    </ul>
   </div>
 </nav>
 <router-outlet></router-outlet>
