Realisé : 2/ Rajouter un champ ‘Rareté’ dans le type de Pokémon et dans la BDD (utilisé les *).

--- a/src/app/pokemons/detail-pokemon/detail-pokemon.component.html
+++ b/src/app/pokemons/detail-pokemon/detail-pokemon.component.html
@@ -28,6 +28,14 @@
                   </td>
                 </tr>
                 <tr>
+                  <td>Rarete</td>
+                  <td>
+
+
+                    <div class="pokemon-etoile">  <span *ngFor="let rarete of pokemon.raretes"  ><p>{{ rarete | pokemonRareteEtoile }}</p></span></div>
+                  </td>
+                </tr>
+                <tr>
                   <td>Date de création</td>
                   <td><em>{{ pokemon.created | date: "dd/MM/yyyy" }}</em></td>
                 </tr>
