--- a/src/app/pokemons/new-pokemon/new-pokemon.component.html
+++ b/src/app/pokemons/new-pokemon/new-pokemon.component.html
@@ -35,15 +35,28 @@
         </div>
       </div>
 
-      <div class="input-field col s12">
-        <select>
-          <option value="" disabled selected>Choose your option</option>
-          <option value="1">Option 1</option>
-          <option value="2">Option 2</option>
-          <option value="3">Option 3</option>
-        </select>
-        <label>Materialize Select</label>
-      </div>
+
+
+
+
+       <!-- Pokemon Type -->
+       <form class="form-group">
+         <label for="types">Pokemon types</label>
+         <p *ngFor="let type of types">
+           <label>
+             <input type="checkbox"
+                class="filled-in"
+                id="{{ type }}"
+                [value]="type"
+
+                (change)="onCheckboxChange($event, type)"
+             >
+             <span [attr.for]="type"><div class="{{ type | pokemonTypeColor }}">{{type | pokemonTypeColor}}</div></span>
+          </label>
+         </p>
+      </form>
+
+
 
         <!-- Submit button -->
         <div class="form-row">
