--- a/src/app/pokemons/edit-pokemon/form-pokemon.component.html
+++ b/src/app/pokemons/edit-pokemon/form-pokemon.component.html
@@ -46,6 +46,18 @@
            </div>
         </div>
 
+
+
+        <div class="form-group">
+          <label for="pokemons">Choosie une image :</label>
+          <select  [(ngModel)]="pokemon.picture" name="pic" #pic="ngModel"  id="pokemons"  class="browser-default icons ">
+              <option value="">Please choose an option</option>
+               <option *ngFor='let poki of pokemons' [value]="poki.picture"  data-icon="pokemon.picture" class="left">{{poki.picture}} </option>
+
+          </select>
+        </div>
+
+
         <!-- Pokemon types -->
         <form class="form-group">
           <label for="types">Types</label>
