--- a/src/app/pokemons/edit-pokemon/form-pokemon.component.html
+++ b/src/app/pokemons/edit-pokemon/form-pokemon.component.html
@@ -46,6 +46,22 @@
            </div>
         </div>
 
+            <!-- Pokemon Raretes -->
+            <div class="form-group">
+              <label for="raretes">Rarete</label>
+              <input type="number" class="form-control" id="raretes"
+                      required
+                      pattern="^[0-5]{1}$"
+                     [(ngModel)]="pokemon.raretes" name="raretes"
+                     #raretes="ngModel">
+               <div [hidden]="raretes.valid || raretes.pristine"
+                     class="card-panel red accent-1">
+                     <p>La raretée d'un pokemon varie entre 0 et 5..</p>
+               </div>
+            </div>
+
+
+
 
 
         <div class="form-group">
