--- a/src/app/pokemons/edit-pokemon/form-pokemon.component.html
+++ b/src/app/pokemons/edit-pokemon/form-pokemon.component.html
@@ -9,7 +9,8 @@
           <input type="text" class="form-control" id="name"
                   required
                   pattern="^[a-zA-Zàéèç]{1,25}$"
-                 [(ngModel)]="pokemon.name" name="name"
+                 [(ngModel)]="pokemon.name"
+                 name="name"
                  #name="ngModel">
 
           <div [hidden]="name.valid || name.pristine"
