--- a/src/app/pokemons/list-pokemons/pokemons.component.html
+++ b/src/app/pokemons/list-pokemons/pokemons.component.html
@@ -1,10 +1,12 @@
+
+  <app-search-pokemon></app-search-pokemon>
 <h1 class="center">Liste de Pokémons</h1>
 <div class="container">
   <div class="row">
     <div *ngFor='let pokemon of pokemons' class="col s6 m4">
       <div class="card horizontal" (click)="selectPokemon(pokemon)" pkmnBorderCard>
         <div class="card-image">
-          <img [src]="pokemon.picture">  
+          <img [src]="pokemon.picture">
         </div>
         <div class="card-stacked">
           <div class="card-content">
@@ -16,4 +18,5 @@
       </div>
     </div>
   </div>
+
 </div>
