--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <div class="nav-wrapper teal">
+  <div class="nav-wrapper">
     <a href="/" class="brand-logo center">Application de pokemon</a>
     <ul id="nav-mobile" class="left hide-on-med-and-down">
       <li><em>Issa-BARRY</em></li>
