--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,14 @@
   font-weight: 700;
   cursor: pointer;
 }
+
+.rech{
+  position: relative;
+  right: 15%;
+}
+.autocomplete{
+  text-align: center;
+}
+.lable{
+  font-size: 18px;
+}
