Lint test resolve

--- a/src/app/pokemons/detail-pokemon/detail-pokemon.component.html
+++ b/src/app/pokemons/detail-pokemon/detail-pokemon.component.html
@@ -56,5 +56,5 @@
 </div>
 <!-- <h4 *ngIf="!pokemon" class="center">Aucun pokémon à afficher !</h4> -->
 <h4 *ngIf="!pokemon" class="center">
-  <pkm-loader></pkm-loader>
+  <app-pkm-loader></app-pkm-loader>
 </h4>
