--- a/src/app/pokemons/edit-pokemon/edit-pokemon.component.html
+++ b/src/app/pokemons/edit-pokemon/edit-pokemon.component.html
@@ -3,5 +3,5 @@
   <img *ngIf="pokemon"   [src]="pokemon.picture">
 </p>
 
-<form-pokemon [pokemon]="pokemon"></form-pokemon>
+<app-form-pokemon [pokemon]="pokemon"></app-form-pokemon>
 
