--- a/src/app/pokemons/edit-pokemon/form-pokemon.component.html
+++ b/src/app/pokemons/edit-pokemon/form-pokemon.component.html
@@ -111,5 +111,5 @@
 </form>
 <!-- <h3 *ngIf="!pokemon" class="center">Aucun pokémon à éditer...</h3> -->
 <h4 *ngIf="!pokemon" class="center">
-  <pkm-loader></pkm-loader>
+  <app-pkm-loader></app-pkm-loader>
 </h4>
